--- a/style.css
+++ b/style.css
@@ -32,10 +32,11 @@ body{
     grid-row-end: 4;
     grid-column-start: 1;
     grid-column-end: 3;
+    text-align: center;
 }
 
 .footer{
-    grid-column: 1 / span 3;
+    grid-column: 1 / span 4;
 }
 
 .container div{
