--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    margin: 0;
+    margin: 10;
 }
 
 .container{
@@ -12,13 +12,31 @@ body{
 
     display: grid;
 
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 50px 1fr 1fr 1fr 100px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 50px 1fr 1fr 100px;
 
     gap: 10px;
 
     padding: 10px;
     box-sizing: border-box;
+}
+
+.content-long{
+
+    display: grid;
+
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 50px 1fr 1fr ;
+
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 3;
+}
+
+.content-long-head{
+    grid-column-start: 1;
+    grid-column-end: 3;
+    text-align: center;
 }
 
 .header{
@@ -27,19 +45,24 @@ body{
     text-align: center;
 }
 
-.content-large{
-    grid-row-start: 2;
-    grid-row-end: 4;
-    grid-column-start: 1;
-    grid-column-end: 3;
-    text-align: center;
-}
-
 .footer{
     grid-column: 1 / span 4;
 }
 
+.content-small-2{
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 3;
+
+}
+
+
 .container div{
+    text-align: center;
     padding: 10px;
     border: 1px solid black;
+}
+img{
+    width: 100%;
+    height: 100%;
 }
