--- a/style.css
+++ b/style.css
@@ -26,18 +26,13 @@ body{
     display: grid;
 
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 50px 1fr 1fr ;
+    grid-template-rows: 1fr 1fr 1fr ;
 
     grid-column-start: 1;
     grid-column-end: 3;
     grid-row-start: 3;
 }
 
-.content-long-head{
-    grid-column-start: 1;
-    grid-column-end: 3;
-    text-align: center;
-}
 
 .header{
     grid-column-start: 1;
@@ -53,7 +48,6 @@ body{
     grid-column-start: 3;
     grid-column-end: 4;
     grid-row-start: 3;
-
 }
 
 
@@ -62,7 +56,4 @@ body{
     padding: 10px;
     border: 1px solid black;
 }
-img{
-    width: 100%;
-    height: 100%;
-}
+
