--- a/style.css
+++ b/style.css
@@ -7,8 +7,6 @@ body{
     height: auto;
 
     font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    font-size: 20px;
 
     display: grid;
 
@@ -39,16 +37,19 @@ body{
     grid-column-end: 5;
     text-align: center;
     font-size: 30px;
+    font-weight: bold;
 }
 
 .footer{
 
     display: grid;
 
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr ;
+    grid-template-rows: 1fr;
 
     grid-column: 1 / span 4;
 }
+
 
 .content-small-2{
     grid-column-start: 3;
